[package]
name = "fs"
version = "0.4.2"
edition = "2021"

authors = ["Devendra"]
description = "Tui based basic file explorer, Built with Rust. supports easy navigation and file management through a terminal interface."
repository = "https://github.com/devendra-official/FileScout"
keywords = ["tui", "file explorer", "file scout", "rust", "cli"]
categories = ["command-line-utilities", "file-management", "terminal"]
license-file = "LICENCE"
readme = "README.md"

[dependencies]
aes-gcm = "0.10.3"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
